# swagger-coverage

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
litovsky_swagger_coverage/: deco.py  report.py  swagger_coverage.py
litovsky_swagger_coverage/scripts/: swagger_report.py
swagger_coverage/: coverage.py  deco.py  logging.py  report.py  singltone_like.py
swagger_coverage/scripts/: swagger_report.py
swagger_coverage/src/: check_data.py  coverage.py  deco.py  files.py  models.py  prepare_data.py  report.py  requests.py  swagger_diff.py  utils.py
swagger_coverage/src/files/: script.js
swagger_coverage/src/models/: stats.py  swagger_data.py
swagger_coverage/src/report/html/: accordion.py  body.py  btn_group.py  colors.py  constants.py  h2.py  head.py  href.py  html_report.py  models.py  navbar.py  p.py  prepare_data.py  progress.py  scripts.py  table.py
swagger_coverage/src/report/plain/: plain_report.py
swagger_coverage/src/results/: load_results.py  swagger_diff.py  swagger_results.py  swagger_summary.py
swagger_report/: swagger_data.yaml
test_swagger_coverage/: deco.py  report.py  swagger_coverage.py
test_swagger_coverage/scripts/: swagger_report.py
tests/: test_e2e.py  test_report.py  test_swagger.py
tests/swagger_report/: index.html
