[tool.poetry]
name = "test-swagger-coverage"
version = "0.1.21"
description = "Swagger coverage for API tests"
authors = ["alexanderlozovoy <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
PyYAML = "^6.0"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
swagger_coverage = "test_swagger_coverage.scripts.swagger_report:main"
